# matched

./: .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  docs.yml  release.yml  ruff.yml  tests.yml
docs/: allocation.ipynb  index.md  reference.md
docs/notebooks/: 01-data.ipynb  02-preprocessing.ipynb  03-algorithm.ipynb
docs/notebooks/raw/: internal-choices.csv  projects.csv
docs/raw/: internal-choices.csv  projects.csv
src/matched/: __init__.py  match.py  pre_process.py  preprocess.py
tests/: conftest.py  test_match.py  test_pre_process.py  test_preprocess.py
tests/data/: _make.py  choices.csv  choices1.csv  choices_duplicated.csv  nmax.csv  nmax1.csv  projects.csv
