[project]
name = "matched"
version = "2026.07.0"
description = "Student-project matching tool."
readme = "README.md"
authors = [{ name = "Marijan Beg", email = "m.beg@imperial.ac.uk" }]
requires-python = ">=3.13"
dependencies = ["pandas>=3.0.1"]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "projects",
    "higher education",
    "matching",
    "allocation",
    "assignment",
    "optimization",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]

[dependency-groups]
dev = [
    "fakeitmakeit>=2025.10.1",
    "ipykernel>=6.29.5",
    "nbval>=0.11.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-randomly>=4.1.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
]

[project.urls]
Repository = "https://github.com/teachnology/matched"
Issues = "https://github.com/teachnology/matched/issues"
Changelog = "https://github.com/teachnology/matched/releases"

[build-system]
requires = ["uv_build>=0.11.31,<0.12"]
build-backend = "uv_build"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.format]

[tool.ruff.lint]
select = [
    "F",    # flake8
    "E",    # pycodestyle
    "W",    # pycodestyle (warnings)
    "N",    # pep8-naming
    "E501", # line too long - not enabled by default
    "UP",   # pyupgrade
    "I",    # isort
    "D",    # pydocstyle
    "PD",   # pandas-vet
    "PL",   # pylint
    "NPY",  # numpy
    "RUF",  # ruff
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ICN",  # flake8-import-conventions
    "PERF", # perflint
    "RET",  # flake8-return
    "PIE",  # flake8-pie
    "ERA",  # eradicate
    "T20",  # flake8-print
]
ignore = [
    "D100",    # Missing docstring in public module
    "PLR2004", # Magic value used in comparison
    "PLR0911", # Too many return statements
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D"]
"tests/*" = ["D"]

[tool.coverage.run]
omit = ["tests/*.py"]

[tool.coverage.report]
fail_under = 90

[tool.pytest.ini_options]
addopts = "-v -n auto --doctest-modules --cov=matched --cov-report=html --cov-report=term"
